# slop-desk

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .shellcheckrc  .swiftformat  .swiftlint.yml  CLAUDE.md  LICENSE  Makefile  Package.resolved  Package.swift  README.md  THIRD_PARTY_NOTICES.md  ruff.toml
.github/workflows/: ci.yml
Apps/ClientApp-iOS/: Info.plist  project-video.yml  project.yml
Apps/ClientApp-macOS/: Info.plist  project.yml
Apps/HostApp-macOS/: AislopdeskHostApp.swift  HostApp-macOS.entitlements  HostController.swift  MenuContentView.swift  SlopDeskHostApp.swift  TCCStatus.swift  project.yml
Apps/Shared/: AppMain.swift  WebPaneView.swift
Sources/AislopdeskCLICore/: CLIArgs.swift  CLIConfig.swift  WatchClaudeOutcome.swift  WatchProgress.swift
Sources/AislopdeskClaudeCode/: InputBoxModel.swift  InputDedupRing.swift  PromptQueueModel.swift  RichPasteMarkdown.swift  TerminalModeStream.swift  TerminalModeTracker.swift
Sources/AislopdeskClient/: AislopdeskClient.swift  ClientError.swift  EventBroadcaster.swift  ReconnectManager.swift
Sources/AislopdeskClientUI/: AislopdeskClientApp.swift  WorkspaceRootView.swift
Sources/AislopdeskHost/: ClaudeCodeProfile.swift  CommandBlockSegmenter.swift  CommandBlockTracker.swift  HostCommandStatusSniffer.swift  HostEnvironment.swift  HostMetadataProbe.swift  HostOutputSniffer.swift  HostServer.swift  HostdArguments.swift  InspectorServer.swift  MetadataResponseBuilder.swift  MuxChannelSession.swift  PTYProcess.swift  PTYReadLoop.swift  PausableQueueGate.swift  ShellIntegration.swift  TerminfoResolver.swift
Sources/AislopdeskInspector/: EventBuilder.swift  HookIngest.swift  InspectorChannel.swift  InspectorEngine.swift  InspectorEvent.swift  InspectorReplayLog.swift  InspectorViewModel.swift  InspectorViews.swift  InspectorWire.swift  JSONValue.swift  LineAccumulator.swift  NWByteChannel.swift  SubagentWatcher.swift  TranscriptLine.swift  TranscriptParser.swift  TranscriptTailer.swift
Sources/AislopdeskProtocol/: Aislopdesk.swift  AislopdeskError.swift  BigEndian.swift  FrameDecoder.swift  RustFFI.swift  WatchNotificationMarker.swift  WireMessage+Decode.swift  WireMessage+Encode.swift  WireMessage.swift
Tests/: .swiftlint.yml
docs/: 00-overview.md  01-architecture.md  02-host-capture-encode.md  03-transport-protocol.md  04-client-decode-render.md  05-input-window-control.md  06-permissions-distribution.md  07-roadmap.md  08-risks-open-questions.md  09-codec-choice.md  10-latency-optimization.md  11-absolute-latency.md  12-coding-profile.md  13-netbird-transport.md  13-network-transport.md  14-claude-code-integration.md  15-prior-art-happy-happier.md  16-readonly-inspector.md  17-native-feel-synthesis.md  18-risk-resolutions.md  19-implementation-plan.md  20-wire-protocol.md  21-HANDOFF.md  22-workspace-architecture.md  23-workspace-ui-handoff.md  24-hardening-handoff.md  25-overnight-handoff.md  26-RESEARCH-OPTIMIZATIONS.md  27-NIGHT-HANDOFF.md  28-NIGHT-HANDOFF.md  29-NIGHT-HANDOFF.md  30-infinite-canvas.md  30-ui-architecture.md  31-TERMINAL-SMOOTHNESS-HANDOFF.md  32-BORDERLESS-CANVAS-UIUX.md  33-UIUX-FEATURES-ROUND.md  34-FEATURES-ROUND-2026-06-13.md  35-NON-OVERLAP-LAYOUT.md  36-UIUX-DX-ROUND-2026-06-13.md  37-BUGHUNT-DX-ROUND-2026-06-13.md  (+10 more)
golden/: golden_vectors.json
hid-bridge/: .gitignore  build.sh
rust/: Cargo.toml  SWAP_PLAN.md  SWAP_STATUS.md  build-apple.sh  clippy.toml  deny.toml  rustfmt.toml
rust/aislopdesk-core/src/: adaptive_fec.rs  adaptive_qp.rs  bytes.rs  capture_region.rs  coordinate_mapping.rs  cursor.rs  decode_frontier.rs  decode_gate.rs  fec.rs  fps_governor.rs  fragment.rs  geometry.rs  gf256.rs  host_output_sniffer.rs  idle_reap_decider.rs  input_event.rs  interleaver.rs  lib.rs  live_bitrate_policy.rs  live_congestion_controller.rs  ltr_controller.rs  mux_header.rs  owd_late_detector.rs  pacer_depth_policy.rs  reassembler.rs  recovery.rs  recovery_idr_policy.rs  recovery_policy.rs  rs_matrix.rs  scroll_shift.rs  seq.rs  system_dialog_detector.rs  trendline_estimator.rs  video_control.rs  virtual_display_geometry.rs  virtual_hid_keyboard.rs  window_geometry.rs  window_placement.rs
rust/aislopdesk-core/src/terminal/: mod.rs  reader.rs  session.rs  wire_message.rs
rust/aislopdesk-core/src/terminal/mux/: bounded_queue_policy.rs  envelope.rs  flow_control.rs  flow_credit_policy.rs  frame_decoder.rs  receive_window_accountant.rs
rust/aislopdesk-core/src/video_session/: state_machine.rs
rust/aislopdesk-core/tests/: golden_parity.rs
rust/aislopdesk-core/tests/vectors/: golden_vectors.json
rust/aislopdesk-ffi/: cbindgen.toml
rust/aislopdesk-ffi/include/: aislopdesk_ffi.h
rust/aislopdesk-ffi/src/: lib.rs  video.rs
rust/aislopdesk-ffi/src/video/: capture_region.rs  decode_gate.rs  mod.rs  mux_header.rs  reassembler.rs  scroll_shift.rs  video_control.rs
rust/aislopdesk-ffi/tests/: ffi_boundary.rs  run_c_smoke.sh  smoke.c
scripts/: capture-mouse-probe.swift  check-ds-leaks.sh  check-ios.sh  check-macos.sh  check-menu-shortcutless.sh  check-system-dialog.sh  check-video.sh  enable-ios-renderer.sh  enable-macos-renderer.sh  golden-check.sh  inject-telex-probe.swift  pre-push-test.sh  setup-virtual-hid.sh  video-input-synclient.py  video-input-test.sh
(+2370 files in other folders)
